# predictive-ltv-survival-pipeline

./: .editorconfig  .env.example  .gitignore  .style.yapf  ARCHITECTURE.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  Makefile  PHASE_4_BATCH_4_COMPLETION_REPORT.md  PHASE_4_BATCH_5_1_COMMAND_LOG.md  PHASE_4_BATCH_5_1_HARDENING_REPORT.md  PHASE_4_BATCH_5_COMMAND_LOG.md  PHASE_4_BATCH_5_COMPLETION_REPORT.md  README.md  SECURITY.md  STANDING_INSTRUCTIONS.md  dbt_project.yml  profiles.yml  profiles.yml.example  pyproject.toml  requirements-dev-lock.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
airflow/: airflow.db  init_airflow.sh  start_airflow_dev.sh
docs/: 01_project_brief.md  02_phase_by_phase_implementation_plan.md  03_requirement_specification_document.md  04_business_blueprint_for_managers.md  05_batch_documentation_report.md  06_command_log.md  07_master_thesis_report.md  08_non_technical_executive_report.md  09_beginner_walkthrough.md  10_seminar_and_thesis_defense_brief.md  11_interview_questions_and_answers.md  12_implementation_scaffold_report.md  13_implementation_command_log.md  ACCESS_CONTROL_POLICY.md  AUDIT_FINDINGS_AND_CORRECTIONS.md  BATCH_1_2_VALIDATION_REPORT.md  BRANCH_PROTECTION_REQUIRED_CHECKS.md  BRANCH_PROTECTION_RULES.md  BRANCH_PROTECTION_TEST_PLAN.md  CI_CD_CONFIGURATION.md  COMPLIANCE_ARTIFACT_SCHEMA.md  COMPLIANCE_AUDIT_PROCESS.md  DATA_LINEAGE.md  DATA_OWNERSHIP.md  GOVERNANCE_POLICY.md  (+45 more)
(+102 files in other folders)
